--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -11,8 +11,11 @@
 }
 
 .switchers {
+	width: 100%;
 	position: absolute;
 	bottom: 20px;
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
